fix config comment

--- a/vee-mail.config
+++ b/vee-mail.config
@@ -6,7 +6,7 @@ EMAILFROM="mail@my.domain"
 EMAILTO="mail@my.domain"
 # directory of mail template file
 HTMLTEMPLATE="/opt/vee-mail/vee_mail_template.html"
-# if curl is installed vee-mail may check for new version if set to 1
+# if curl is installed vee-mail check for new version if set to 0
 SKIPVERSIONCHECK=0
 # if you backup to a smb-share fill in your credentials to get infos about free backup space
 SMBUSER=""
