add CURL config

--- a/vee-mail.config
+++ b/vee-mail.config
@@ -15,3 +15,16 @@ SMBPWD=""
 INFOMAIL=1
 # if set to 1 get more debug output on script run
 DEBUG=0
+
+# Use curl instead of sendmail
+# set it to 1 to use Curl instead of sendmail to send the mail
+USECURL=0
+# you need to specify SMTP/SMTPS server in URI form
+CURLSMTPSERVER="smtp://mailserver:25"
+# you can specify smtp username/password
+CURLUSERNAME=""
+CURLPASSWORD=""
+# you can require STARTTLS next to the connection
+CURLSTARTTLS=0
+# you can ignore TLS certificate validation against CA
+CURLINSECURE=0
