fix comment in config file

--- a/vee-mail.config
+++ b/vee-mail.config
@@ -11,7 +11,7 @@ SKIPVERSIONCHECK=0
 # if you backup to a smb-share fill in your credentials to get infos about free backup space
 SMBUSER=""
 SMBPWD=""
-# infomail: 1=always, 2=warning only, 3=error only
+# infomail: 1=always, 2=warning and error only, 3=error only
 INFOMAIL=1
 # if set to 1 get more debug output on script run
 DEBUG=0
