add SLEEP as config parameter
if the script is started as a post-script by veeam, then it waits 60 seconds and checks whether the job has been successfully completed. only then the mail is sent. the 60 seconds can be changed via the SLEEP parameter.

--- a/vee-mail.config
+++ b/vee-mail.config
@@ -13,6 +13,8 @@ SMBUSER=""
 SMBPWD=""
 # infomail: 1=always, 2=warning and error only, 3=error only
 INFOMAIL=1
+# variable sleep time if mail is not sent when started as post script
+SLEEP=60
 # if set to 1 get more debug output on script run
 DEBUG=0
 
