Updated config and script to accommodate comma separated list of job names in order to parse and notify on multiple backup job names in veeam

--- a/vee-mail.config
+++ b/vee-mail.config
@@ -1,5 +1,5 @@
-# name of the veeam backup job as set in veeam!
-JOBNAME="myJobName"
+# Comma-separated list of Veeam job names
+JOBNAME="Backblaze,AnotherBackupJob,DailyAllVMs"
 # the sender email address
 EMAILFROM="mail@my.domain"
 # receiver email address
